--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         </form>
         <h4 class="js-greetings greetings"></h4>
         
-        <form class="js-toDoForm">
-            <input type="text" placeholder="write a to do" style="width: 200px"/>
+        <div class="js-toDoForm__box">
+        <form class="js-toDoForm input">
+            <input type="text"/>
         </form>
+        </div>
         <ul class="js-toDoList">
-
         </ul>
         <div class="js-weather__con">
         <span class="js-weather"></span>
